Fix some problems with replacement of german umlauts. Fix problems with encodings (Bug 2947177)